--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     implementation 'com.github.jd-alexander:android-flat-button:v1.1'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'com.firebaseui:firebase-ui-database:3.2.2'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
