--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,9 @@
         </service>
 
         <activity android:name=".BannerActivity" />
-        <activity android:name=".SendMessageActivity"></activity>
+        <activity android:name=".SendMessageActivity" />
+        <activity android:name=".HomeNewActivity" />
+        <activity android:name=".ServiceDetailActivity"></activity>
     </application>
 
 </manifest>
