--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ResetPasswordActivity"></activity>
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,7 +56,7 @@
         <activity android:name=".BannerActivity" />
         <activity android:name=".SendMessageActivity" />
         <activity android:name=".HomeNewActivity" />
-        <activity android:name=".ServiceDetailActivity"></activity>
+        <activity android:name=".ServiceDetailActivity" />
     </application>
 
 </manifest>
